--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diagnosticpret",
+  "name": "dossierpret",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "@astrojs/node": "^9.5.3",
+    "@astrojs/sitemap": "^3.7.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "@clerk/astro": "^2.17.2",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.17.1",
+    "stripe": "^20.3.1",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/svelte": "^7.2.5",
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "svelte": "^5.51.0",
+    "tailwindcss": "^4.1.18"
   }
 }
