--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/node": "^9.5.3",
     "@astrojs/sitemap": "^3.7.0",
     "@clerk/astro": "^2.17.2",
+    "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.17.1",
     "stripe": "^20.3.1",
